--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,13 @@ PyJWT==2.6.0
 pytz==2023.3
 sqlparse==0.4.4
 tzdata==2023.3
+anyio==3.6.2
+certifi==2022.12.7
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
+idna==3.4
+python-telegram-bot==20.2
+rfc3986==1.5.0
+sniffio==1.3.0
+python-dotenv~=1.0.0
