--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,9 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
+          pip install "python-dotenv[cli]"
           pip install python-dotenv
       - name: Load environment variables from .env
-        run: python -m dotenv -f .env
+        run: dotenv -f .env python manage.py test
       - name: Run tests
         run: python manage.py test
