--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,9 @@ BOT_TOKEN=BOT_TOKEN
 CHAT_ID=CHAT_ID
 STRIPE_SECRET_KEY=STRIPE_SECRET_KEY
 STRIPE_PUBLIC_KEY=STRIPE_PUBLIC_KEY
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=bradlot954
-DB_HOST=127.0.0.1
-DB_PORT=5432
+POSTGRES_DB=POSTGRES_DB
+POSTGRES_USER=POSTGRES_USER
+POSTGRES_PASSWORD=POSTGRES_PASSWORD
+POSTGRES_HOST=POSTGRES_HOST
+POSTGRES_PORT=POSTGRES_PORT
+SECRET_KEY=SECRET_KEY
