--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ drf-spectacular==0.26.2
 idna==3.4
 inflection==0.5.1
 jsonschema==4.17.3
+psycopg2-binary==2.9.6
 PyJWT==2.6.0
 pyrsistent==0.19.3
 python-dateutil==2.8.2
